fix(asset-metadata): increase spacing between card header and value

--- a/edge-apps/asset-metadata/src/css/style.css
+++ b/edge-apps/asset-metadata/src/css/style.css
@@ -77,7 +77,7 @@ auto-scaler {
     0 calc(0.2 * var(--su)) calc(1.5 * var(--su)) rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
-  gap: calc(0.4 * var(--su));
+  gap: calc(0.7 * var(--su));
 }
 
 .card-header {
